--- a/index.html
+++ b/index.html
@@ -11,13 +11,31 @@
     <title>AJAX JQuery</title>
   </head>
   <body>
+    <div>
+      <input type="radio" id="cat" name="cat" value="cat" />
+      <label for="cat">Cat</label>
+    </div>
+
+    <div>
+      <input type="radio" id="dog" name="dog" value="dog" />
+      <label for="dog">Dog</label>
+    </div>
+
+    <div>
+      <input type="radio" id="horse" name="horse" value="horse" />
+      <label for="horse">Horse</label>
+    </div>
+    <button>Request fact</button>
+
     <script>
+      //querySelector "[checked]" ":checked"
+      // animal = "cat"
+      document.querySelector(":checked");
+      let animal = "cat";
       $(document).ready(function () {
-        $("input").click(function () {
-          const button = document.querySelector("name");
-          let myvar = name.checked;
+        $("button").click(function () {
           $.get(
-            `https://cat-fact.herokuapp.com/facts/random?animal_type=${myvar}&amount=1`,
+            `https://cat-fact.herokuapp.com/facts/random?animal_type=${animal}&amount=1`,
             function (facts, status) {
               alert(facts.text);
             }
@@ -25,24 +43,5 @@
         });
       });
     </script>
-
-    <button>
-      <legend>Select an animal:</legend>
-
-      <div>
-        <input type="radio" id="cat" name="cat" value="cat" checked />
-        <label for="huey">Cat</label>
-      </div>
-
-      <div>
-        <input type="radio" id="dog" name="dog" value="dog" />
-        <label for="dewey">Dog</label>
-      </div>
-
-      <div>
-        <input type="radio" id="horse" name="horse" value="horse" />
-        <label for="louie">Horse</label>
-      </div>
-    </button>
   </body>
 </html>
